--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: project_template_development
+  database: real_estate_app_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: project_template
+  #username: real_estate_app
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: project_template_test
+  database: real_estate_app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: project_template_production
-  username: project_template
-  password: <%= ENV['PROJECT_TEMPLATE_DATABASE_PASSWORD'] %>
+  database: real_estate_app_production
+  username: real_estate_app
+  password: <%= ENV['real_estate_app_DATABASE_PASSWORD'] %>
